[gd_scene load_steps=15 format=3 uid="uid://cc7y5nc4tu3kb"]

[ext_resource type="Script" uid="uid://dfmvsikl3olw2" path="res://Script/UI/ui.gd" id="1_2pwlc"]
[ext_resource type="FontFile" uid="uid://bm8c28467y1fr" path="res://Asset/Font/AlfaSlabOne-Regular.ttf" id="2_6g08h"]
[ext_resource type="Texture2D" uid="uid://bb0gnu51t8yau" path="res://Asset/Image/PS_button.png" id="3_dat32"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dat32"]
bg_color = Color(0, 0.996078, 0.933333, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8r4it"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vjq62"]
bg_color = Color(0, 0.8, 0.733333, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tumqg"]
bg_color = Color(0.976471, 0.976471, 0.976471, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.377919, 0.377919, 0.377919, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2b1ku"]
bg_color = Color(0, 1, 0.917647, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.377919, 0.377919, 0.377919, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Animation" id="Animation_a6nky"]
resource_name = "Fade_in"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerMainUI/MarginContainer2/ComboShowLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(0.965936, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerMainUI/MarginContainer2/ComboShowLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vlqrm"]
resource_name = "Fade_out"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerMainUI/MarginContainer2/ComboShowLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 0.965936),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerMainUI/MarginContainer2/ComboShowLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_k7dtb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerMainUI/MarginContainer2/ComboShowLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerMainUI/MarginContainer2/ComboShowLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PauseMenu/CountDownLabel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8r4it"]
resource_name = "countDownIn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PauseMenu/CountDownLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dat32"]
resource_name = "countDownOut"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PauseMenu/CountDownLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.466667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_evb32"]
_data = {
&"Fade_in": SubResource("Animation_a6nky"),
&"Fade_out": SubResource("Animation_vlqrm"),
&"RESET": SubResource("Animation_k7dtb"),
&"countDownIn": SubResource("Animation_8r4it"),
&"countDownOut": SubResource("Animation_dat32")
}

[node name="UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2pwlc")

[node name="PsButton" type="Sprite2D" parent="."]
position = Vector2(-610, 281)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_dat32")

[node name="PlayerMainUI" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="PlayerMainUI"]
layout_mode = 1
offset_right = 141.0
offset_bottom = 80.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerMainUI/MarginContainer"]
layout_mode = 2

[node name="PointLabel" type="Label" parent="PlayerMainUI/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 20
text = "Point: 0p"

[node name="ComboLabel" type="Label" parent="PlayerMainUI/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 20
text = "Combo: 0x"

[node name="MarginContainer2" type="MarginContainer" parent="PlayerMainUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 442.0
offset_right = 670.0
offset_bottom = 66.0
grow_horizontal = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ComboShowLabel" type="Label" parent="PlayerMainUI/MarginContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_6g08h")
theme_override_font_sizes/font_size = 40
text = "PERFECT"

[node name="WinMenu" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="WinMenu"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="WinMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="WinMenu/Panel/MarginContainer"]
layout_mode = 2

[node name="ScoreInformation" type="HBoxContainer" parent="WinMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Panel" type="VBoxContainer" parent="WinMenu/Panel/MarginContainer/VBoxContainer/ScoreInformation"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="WinMenu/Panel/MarginContainer/VBoxContainer/ScoreInformation/Panel"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "FINAL SCORE: "

[node name="PerfectWinLabel" type="Label" parent="WinMenu/Panel/MarginContainer/VBoxContainer/ScoreInformation/Panel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.153186, 0.495021, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_6g08h")
theme_override_font_sizes/font_size = 25
text = "Perfect: "
horizontal_alignment = 1

[node name="GreatWinLabel" type="Label" parent="WinMenu/Panel/MarginContainer/VBoxContainer/ScoreInformation/Panel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.797257, 5.02485e-05, 0.610029, 1)
theme_override_fonts/font = ExtResource("2_6g08h")
theme_override_font_sizes/font_size = 25
text = "Great:"
horizontal_alignment = 1

[node name="GoodWinLabel" type="Label" parent="WinMenu/Panel/MarginContainer/VBoxContainer/ScoreInformation/Panel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.260018, 0.479398, 1, 1)
theme_override_fonts/font = ExtResource("2_6g08h")
theme_override_font_sizes/font_size = 25
text = "Good"
horizontal_alignment = 1

[node name="MissWinLabel" type="Label" parent="WinMenu/Panel/MarginContainer/VBoxContainer/ScoreInformation/Panel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.439049, 0.439049, 0.439049, 1)
theme_override_fonts/font = ExtResource("2_6g08h")
theme_override_font_sizes/font_size = 25
text = "Miss:"
horizontal_alignment = 1

[node name="Panel2" type="CenterContainer" parent="WinMenu/Panel/MarginContainer/VBoxContainer/ScoreInformation"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_vertical = 4

[node name="FinalRankLabel" type="Label" parent="WinMenu/Panel/MarginContainer/VBoxContainer/ScoreInformation/Panel2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_6g08h")
theme_override_font_sizes/font_size = 45
text = "Rank: S"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="WinMenu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ContinuteFromWinMenuButton" type="Button" parent="WinMenu/Panel/MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_dat32")
text = "Continute"

[node name="PauseMenu" type="Control" parent="."]
unique_name_in_owner = true
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonOutContainer" type="Panel" parent="PauseMenu"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8r4it")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/ButtonOutContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PauseMenu/ButtonOutContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vjq62")

[node name="Label" type="Label" parent="PauseMenu/ButtonOutContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.5
offset_top = -11.5
offset_right = 50.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 20
text = "PAUSE GAME"

[node name="ButtonContainer" type="HBoxContainer" parent="PauseMenu/ButtonOutContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 25
alignment = 1

[node name="ExitButton" type="Button" parent="PauseMenu/ButtonOutContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_tumqg")
text = "Exit"

[node name="RestartButton" type="Button" parent="PauseMenu/ButtonOutContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_tumqg")
text = "Restart"

[node name="ContinuteButton" type="Button" parent="PauseMenu/ButtonOutContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_2b1ku")
text = "Continute"

[node name="CountDownLabel" type="Label" parent="PauseMenu"]
unique_name_in_owner = true
visible = false
layout_mode = 2
offset_left = 561.0
offset_top = 289.5
offset_right = 590.0
offset_bottom = 358.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 50
text = "3"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_evb32")
}

[connection signal="pressed" from="WinMenu/Panel/MarginContainer/VBoxContainer/MarginContainer/ContinuteFromWinMenuButton" to="." method="_on_continute_from_win_menu_button_pressed"]
[connection signal="pressed" from="PauseMenu/ButtonOutContainer/VBoxContainer/ButtonContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="PauseMenu/ButtonOutContainer/VBoxContainer/ButtonContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PauseMenu/ButtonOutContainer/VBoxContainer/ButtonContainer/ContinuteButton" to="." method="_on_continute_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
